src/scss/core/_dl.scss
dl {
	$toc-separator-line: '----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------';

	display: grid;
	grid-template-columns: 1fr auto;
	width: 100%;

	dt {
		font-weight: bold;

		&.full-width {
			~ dd {
				margin-top: 0;

				> dl > dt {
					&,
					& + dd {
						margin-top: 0;
					}

					&:before {
						content: '├';
						font-weight: 100;
						margin-right: 1ex;
					}

					&:last-of-type:before {
						content: '└';
					}
				}
			}
		}
	}

	dd {
		grid-column-start: 2;
		font-family: monospace;
		overflow: hidden;
		text-overflow: ellipsis;

		+ dd {
			justify-self: end;
			margin-top: 0;
		}
	}





	// ToC Separators

	dt, dd {
		display: flex;
		white-space: nowrap;

		&:not(:first-of-type) {
			margin-top: var(--gutter);
		}

		&.full-width {
			grid-column: span 2;
		}
	}

	dt:after,
	dt + dd:before {
		content: $toc-separator-line;
		flex-grow: 1;
		flex-shrink: 1;
		font-family: var(--main-font);
		font-weight: 100;
		width: 0;
		overflow: hidden;
		text-overflow: clip;
	}

	dt.full-width:after,
	dd.full-width:before {
		display: none;
	}

	dt:after {
		margin-left: 1ch;
	}

	dd:before {
		margin-right: 1ch;
	}
}

